fixes - update docs
