# backend/services/auth/docs/swagger.json
@@ -127,6 +127,17 @@
                     "Authentication"
                 ],
                 "summary": "Authenticate by token",
+                "parameters": [
+                    {
+                        "description": "Login and Password",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.TokenRequestBody"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "User details if token is valid",
@@ -158,6 +169,14 @@
         }
     },
     "definitions": {
+        "http.TokenRequestBody": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "http.UserRequestBody": {
             "type": "object",
             "properties": {
